# RemoteFs

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: filesystem.rs  lib.rs  main.rs
server/: package-lock.json  package.json  server.ts  tsconfig.json
server/src/: server.ts
src/: lib.rs  main.rs
