[package]
name = "remote_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = "4.5.44"
colored = "3.0.0"
daemonize = "0.5.0"
fern = "0.7.1"
fuser = { version = "0.15", features = ["serializable"] }
libc = "0.2.175"
log = "0.4"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
